Added 'discord' as a module to polybar

--- a/.config/polybar/shades/config.ini
+++ b/.config/polybar/shades/config.ini
@@ -138,7 +138,7 @@ font-1 = "Iosevka Nerd Font:pixelsize=15;4"
 ;   modules-center = xwindow xbacklight
 ;   modules-right = ipc clock
 
-modules-left = launcher workspaces terminal emacs github reddit gmail twitter
+modules-left = launcher workspaces terminal emacs github reddit discord twitter gmail
 modules-center = date title
 modules-right = mpd updates pulseaudio battery network sysmenu
 
