--- a/.config/polybar/shades/user_modules.ini
+++ b/.config/polybar/shades/user_modules.ini
@@ -147,6 +147,11 @@ inherit = module/links
 content = 
 click-left = firefox https://www.twitter.com/ &
 
+[module/discord]
+inherit = module/links
+content = ﭮ
+click-left = discord
+
 ;; _-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_
 
 [module/powermenu]
