Changed clickable icons

--- a/.config/polybar/shades/user_modules.ini
+++ b/.config/polybar/shades/user_modules.ini
@@ -144,7 +144,7 @@ click-left = firefox https://mail.google.com/ &
 
 [module/twitter]
 inherit = module/links
-content = 
+content = 
 click-left = firefox https://www.twitter.com/ &
 
 [module/discord]
