Added Spotify Module to polybar

--- a/.config/polybar/shades/config.ini
+++ b/.config/polybar/shades/config.ini
@@ -138,9 +138,9 @@ font-1 = "Iosevka Nerd Font:pixelsize=15;4"
 ;   modules-center = xwindow xbacklight
 ;   modules-right = ipc clock
 
-modules-left = launcher workspaces terminal emacs github reddit discord twitter gmail
+modules-left = launcher workspaces terminal emacs github reddit discord twitter mail
 modules-center = date title
-modules-right = mpd updates pulseaudio battery network sysmenu
+modules-right = spotify updates battery pulseaudio network sysmenu
 
 ;; _-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_
 
