--- a/.config/polybar/shades/modules.ini
+++ b/.config/polybar/shades/modules.ini
@@ -94,7 +94,7 @@ type = internal/backlight
 ; Use the following command to list available cards:
 ; $ ls -1 /sys/class/backlight/
 ;card = intel_backlight
-card = amdgpu_bl0
+card = intel_backlight
 
 ; Available tags:
 ;   <label> (default)
@@ -125,7 +125,7 @@ full-at = 99
 
 ; Use the following command to list batteries and adapters:
 ; $ ls -1 /sys/class/power_supply/
-battery = BAT1
+battery = BAT0
 adapter = ACAD
 
 ; If an inotify event haven't been reported in this many
@@ -738,7 +738,7 @@ label-offline = " Offline"
 ; Only applies if <icon-X> is used
 icon-play = 喇
 icon-pause = 
-icon-stop = 
+icon-stop =
 icon-prev = 
 icon-next = 
 icon-seekb = 
@@ -759,6 +759,18 @@ toggle-off-foreground = ${color.background}
 ;;bar-progress-indicator = |
 ;;bar-progress-fill = ─
 ;;bar-progress-empty = ─
+
+;; _-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_
+
+[module/spotify]
+type = custom/script
+interval = 1
+format-prefix = "  "
+format = <label>
+exec = python ~/.config/polybar/shades/scripts/spotify-module.py -f '{artist} - {song}'
+
+format-background = ${color.shade8}
+format-padding = 2
 
 ;; _-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_
 
