--- a/.config/polybar/shades/user_modules.ini
+++ b/.config/polybar/shades/user_modules.ini
@@ -137,10 +137,10 @@ inherit = module/links
 content = 
 click-left = firefox https://www.reddit.com/ &
 
-[module/gmail]
+[module/mail]
 inherit = module/links
 content = 
-click-left = firefox https://mail.google.com/ &
+click-left = mailspring &
 
 [module/twitter]
 inherit = module/links
